# CNPM

./: .gitignore  README.md  SRS.md  SRS_v2 (2).md  add-exclusion.ps1  copy-logo.ps1  desktop.ini  etms_completion_status.md  plan.docx  plan.md  ~$plan.docx  Đặc tả đề tài.docx
Document/Đặc tả/: 00_MASTER_INDEX.md  01_UseCaseDiagram.md  02_ClassDiagram_v2.md  03_ERD.md  04_SequenceDiagrams.md  05_StateDiagrams.md  06_ActivityDiagrams.md  08_SecurityThreatModel.md  09_ArchitectureDesign.md  10_TraceabilityMatrix.md  11_RiskRegister.md  12_PCL_TestWorkbook.md  SRS_v2.md  plan.md
ETMS/: Form1.Designer.cs  Form1.cs  Program.cs
ETMS.Api/: ETMS.Api.csproj  ETMS.Api.http  Program.cs  appsettings.json
ETMS.Api/Database/: ETMS_DB.sql  migration_player_freename.sql  seed_users.sql
ETMS.Api/Handlers/: AuthHandler.cs  BRHandler.cs  DisputeHandler.cs  MatchHandler.cs  NotificationHandler.cs  OverviewHandler.cs  RegisterHandler.cs  ResultHandler.cs  TeamHandler.cs  TournamentHandler.cs  UserHandler.cs
ETMS.Core/: Class1.cs  ETMS.Core.csproj
ETMS.Core/BUS/: AuthBUS.cs  BracketBUS.cs  DisputeBUS.cs  LeaderboardBUS.cs  MatchBUS.cs  ResultBUS.cs  TeamBUS.cs  TournamentBUS.cs
ETMS.Core/DAL/: AuditLogDAL.cs  BracketDAL.cs  CheckInDAL.cs  (+9 more)
ETMS.Desktop/: index.html  package-lock.json  package.json  vite.config.ts
ETMS.Desktop/src-tauri/: Cargo.toml  tauri.conf.json
ETMS.Desktop/src-tauri/.cargo/: config.toml
ETMS.Desktop/src-tauri/icons/: icon.icns
ETMS.Wpf/: App.xaml  App.xaml.cs  ETMS.Wpf.csproj  appsettings.json
etms-ui/: index.html  package-lock.json  package.json
(+90 files in other folders)
