[package]
name        = "etms-desktop"
version     = "1.0.0"
description = "ETMS — Esports Tournament Management System"
authors     = ["ETMS Team"]
edition     = "2021"

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata]
